chore: remove contact page from mobile menu and nav bar

--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -20,7 +20,8 @@ import ThemeToggle from "./theme-toggle.astro";
       class="align-center hidden gap-8 text-2xl font-bold italic md:flex lg:text-3xl"
     >
       <NavLink href={`${import.meta.env.BASE_URL}/blog`}>Blog</NavLink>
-      <NavLink href={`${import.meta.env.BASE_URL}/contact`}>Contact</NavLink>
+      <!-- TODO: add contact page -->
+      <!-- <NavLink href={`${import.meta.env.BASE_URL}/contact`}>Contact</NavLink> -->
       <NavLink href={`${import.meta.env.BASE_URL}/resume`}>Resume</NavLink>
     </div>
     <div class="flex gap-3">
@@ -47,7 +48,8 @@ import ThemeToggle from "./theme-toggle.astro";
   </nav>
   <div id="off-screen-menu" class="md:hidden">
     <NavLink href={`${import.meta.env.BASE_URL}/blog`}>Blog</NavLink>
-    <NavLink href={`${import.meta.env.BASE_URL}/contact`}>Contact</NavLink>
+    <!-- TODO: add contact page -->
+    <!-- <NavLink href={`${import.meta.env.BASE_URL}/contact`}>Contact</NavLink> -->
     <NavLink href={`${import.meta.env.BASE_URL}/resume`}>Resume</NavLink>
   </div>
 </header>
