style: only show scrollbar when hovering over page

--- a/src/layouts/default.astro
+++ b/src/layouts/default.astro
@@ -6,7 +6,7 @@ import { SITE_DESCRIPTION, SITE_TITLE } from "../consts";
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="en" class="overflow-y-hidden hover:overflow-y-auto">
   <Head title={SITE_TITLE} description={SITE_DESCRIPTION} />
   <body class="bg-background text-foreground">
     <Navbar />
