--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Layout from "../layouts/default.astro";
 
 <Layout>
   <div
-    class="@container/hero relative grid h-full min-h-[calc(100vh-var(--navbar-height)-var(--navbar-margin-top))] place-items-center"
+    class="@container/hero relative grid h-full min-h-[calc(100vh-var(--navbar-spacing))] place-items-center"
   >
     <div
       class="flex flex-col items-center gap-4 text-center md:gap-6 lg:gap-12"
