--- a/src/layouts/page.astro
+++ b/src/layouts/page.astro
@@ -1,10 +1,33 @@
 ---
 import DefaultLayout from "./default.astro";
 import Prose from "@/components/prose.astro";
+
+interface Props {
+  renderTableOfContents?: boolean;
+  tableOfContents: string;
+}
+
+const { tableOfContents, renderTableOfContents = true } = Astro.props;
 ---
 
 <DefaultLayout>
-  <Prose>
-    <slot />
-  </Prose>
+  <div class="align-start flex flex-wrap gap-8 md:flex-nowrap">
+    {
+      renderTableOfContents && (
+        <nav
+          id="toc"
+          class="sticky top-(--navbar-spacing) mt-8 max-h-[calc(100vh-var(--navbar-spacing))] max-w-xs shrink-0 overflow-y-hidden rounded-lg px-4 hover:overflow-y-auto"
+        >
+          <h2 class="mb-2 inline-block border-b font-bold text-nowrap">
+            Table of Contents
+          </h2>
+          <ul class="space-y-1" set:html={tableOfContents} />
+        </nav>
+      )
+    }
+
+    <Prose>
+      <slot />
+    </Prose>
+  </div>
 </DefaultLayout>
