add updates to table of content scrollbar on overflow

--- a/src/layouts/page.astro
+++ b/src/layouts/page.astro
@@ -31,3 +31,11 @@ const { tableOfContents, renderTableOfContents = true } = Astro.props;
     </Prose>
   </div>
 </DefaultLayout>
+
+<style>
+  #toc {
+    scrollbar-gutter: stable;
+    scrollbar-width: thin;
+    scrollbar-color: var(--color-foreground) var(--color-background);
+  }
+</style>
