--- a/src/components/prose.astro
+++ b/src/components/prose.astro
@@ -3,7 +3,7 @@
 ---
 
 <div
-  class="prose dark:prose-invert prose-h1:font-bold prose-h3:font-bold prose-h3:italic prose-p:text-justify prose-img:rounded-xl"
+  class="prose dark:prose-invert prose-h1:font-bold prose-h3:font-bold prose-h3:italic prose-p:text-justify prose-img:rounded-xl mx-auto pt-8"
 >
   <slot />
 </div>
